# DSO

./: .bandit.yml  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  SECURITY.md  app.db  docker-compose.yml  fix_media_owner.py  media.db  mypy.ini  pyproject.toml  requirements.txt  reset_db.py  test.db  test.txt
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml  security-scan.yml
EVIDENCE/P09/: sbom.json  sbom_metadata.txt  sca_report.json  sca_summary.json  sca_summary.md
EVIDENCE/P10/: sast_analysis.md  sast_summary.md
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json  hadolint_report.json  hardening_summary.md  trivy_report.json
docs/adr/: ADR-001-secure-upload.md  ADR-002-rfc7807-errors.md  ADR-003-secrets-and-limits.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
iac/: app-deployment.yaml  deployment.yaml
policy/: waivers.yml
scripts/: test-container.ps1
security/: .gitleaks.toml  checkov.yaml
security/semgrep/: rules.yml
src/: database.py
src/adapters/: database.py  media_repository.py  review_repository.py  user_repository.py
src/app/: main.py
src/app/api/: auth.py  auth_routes.py  routes_auth.py  routes_media.py  routes_reviews.py
src/app/security/: errors.py  files.py  http_client.py  logging.py  validation.py
src/domain/: models.py  schemas.py
src/services/: __init__.py  audit_service.py  auth_service.py  media_security.py  media_service.py  review_service.py
src/tests/: test_media.py
tests/: conftest.py  test_api.py  test_audit_service.py  test_auth_routes_coverage.py  test_auth_service.py  test_auth_service_comprehensive.py  test_auth_service_final.py  test_databse.py  test_errors.py  test_extra_coverage_final.py  test_files.py  test_final_coverage.py  test_final_missing_lines.py  test_http_client.py  test_media_repository_comprehensive.py  test_media_security.py  test_media_service.py  test_media_service_coverage.py  test_missing_coverage.py  test_repositories.py  test_rfc7807_errors.py  test_simple_coverage_final.py  test_validation.py
