[project]
name = "media-service"
version = "0.1.0"
description = "Media service with security features"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "B", "S"]
ignore = [
    "S101",
    "S105",
    "S106",
    "B008",
    "B904",
    "F841",
    "W292",
]
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "S106", "S105", "F841", "E501"]
"src/tests/*" = ["S101", "S106", "S105", "F841", "E501"]
"src/app/api/*" = ["B008", "S105", "S106"]
"src/services/*" = ["B008", "S105", "S106", "E501"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "src/app/__init__.py",
    "src/domain/__init__.py",
    "src/services/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 80

[tool.bandit]
skips = ["B101", "B105", "B106", "B107"]
exclude_dirs = ["tests", "migrations", "venv", ".venv"]
tests = ["B201", "B301"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: security related tests"
]
